Ignore window [de]activation in content_browsertests.

These events can happen when another test starts or finishes and cause
frame/widget focus state changes, breaking some tests.

Bug: 695054

Change-Id: I7fc856cebc32cd9f8df2b11c6df6e3b2c4a54114
Reviewed-on: https://chromium-review.googlesource.com/964843
Commit-Queue: Alexander Semashko <ahest@yandex-team.ru>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546445}
Former-commit-id: 26d48d2a32903e4b5c87d27997343588858bc0a0